--- a/02_Python_Essentials/L04-1conditional_ifelse.ipynb
+++ b/02_Python_Essentials/L04-1conditional_ifelse.ipynb
@@ -119,11 +119,7 @@
    "source": [
     "# Aplication: User enters a number and program display message if number is even or odd\n",
     "\n",
-    "num = input(\"Enter number:\") # it is str\n",
-    "num = int(num) # type cast str into int\n",
-    "\n",
-    "#OR USE\n",
-    "# num = int(input(\"Enter number:\"))\n",
+    "num = int(input(\"Enter number:\")) # type cast str into int\n",
     "\n",
     "if num % 2 == 0:\n",
     "    print(\"Even number\")\n",
@@ -138,45 +134,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "70dae8a0-9f62-4cbc-a699-254b73cc844a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter your name:  harry\n",
-      "Enter your age:  23\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello harry! You are younger than 100 year old man.\n"
-     ]
-    }
-   ],
-   "source": [
-    "#STEP1: Program to display a msg depending on his age: uses if-elif-else condition\n",
-    "\n",
-    "name = input(\"Enter your name: \")\n",
-    "age  = input(\"Enter your age: \")\n",
-    "age  = int(age)\n",
-    "\n",
-    "if   age < 100:\n",
-    "    print(f\"Hello {name}! You are younger than 100 year old man.\")\n",
-    "    \n",
-    "elif age == 100:\n",
-    "    print(f\"Wow {name}, you're exactly 100 years old this year!\")\n",
-    "    \n",
-    "else:\n",
-    "    print(f\"Hey {name}, you are older than 100 years old man.\")"
-   ]
   },
   {
    "cell_type": "code",
@@ -201,12 +158,10 @@
     }
    ],
    "source": [
-    "# STEP2: Lets do some computation: if-elif-else\n",
-    "# Program to calculate the year user turns 100\n",
+    "# Lets do some computation: if-elif-else: Program to calculate the year user turns 100\n",
     "\n",
     "name = input(\"Enter your name: \")\n",
-    "age  = input(\"Enter your age: \")\n",
-    "age  = int(age)\n",
+    "age  = int(input(\"Enter your age: \"))\n",
     "\n",
     "current_year = 2025\n",
     "\n",
@@ -305,65 +260,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "e80d1888-ddf3-401b-8425-2ec4a9b422ef",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Do you want to continue? (yes/no):  YES\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Thank you for your response.\n"
-     ]
-    }
-   ],
-   "source": [
-    "#e.g.2: Ask user whether he wants to continue and check that he enter only yes and no.\n",
-    "\n",
-    "user_input = input(\"Do you want to continue? (yes/no): \").strip().lower()\n",
-    "# print(user_input)\n",
-    "\n",
-    "if user_input == \"yes\" or user_input == \"no\":  # Check if the input is valid\n",
-    "    print(\"Thank you for your response.\")\n",
-    "    \n",
-    "else:\n",
-    "    print(\"Invalid input. Please enter 'yes' or 'no'.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "4abc7959-cb68-42de-858b-7378397fff82",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Weather normal\n"
-     ]
-    }
-   ],
-   "source": [
-    "# SKIP - e.g.3: design a logic that print weather alert when temp < 32 or > 90\n",
-    "temp = 50\n",
-    "\n",
-    "if temp < 32 or temp > 90: \n",
-    "    print(\"Weather alert\")\n",
-    "    \n",
-    "else:\n",
-    "    print(\"Weather normal\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "185b3191-090e-4e0c-8354-725c6833f2e6",
    "metadata": {},
@@ -412,57 +308,6 @@
     "    \n",
     "else:\n",
     "    print(\"Invalid login\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "3975a6e6-d2b8-4dbc-894d-e8f1fd2f066c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You are not eligible for a discount.\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Application: e.g.2: Give 20% discount if member is gold and purchase amount > 100\n",
-    "membership_status = \"gold\"\n",
-    "purchase_amount   = 90 # change this to 90 and 900\n",
-    "\n",
-    "if membership_status == \"gold\" and purchase_amount > 100:  # Check if both conditions are met\n",
-    "    print(\"You are eligible for a 20% discount!\")\n",
-    "    \n",
-    "else:\n",
-    "    print(\"You are not eligible for a discount.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "c9118a41-f84e-4af9-8a0e-5976c3a2a40b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Congratulations! You have passed the course.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# APPLICATIONS: SKIP e.g.3: design logic for -> student passes if score > 70 and attendance > 75%\n",
-    "exam_score = 78\n",
-    "attendance_percentage = 85  # Attendance in percentage\n",
-    "\n",
-    "if exam_score >= 70 and attendance_percentage >= 75:  # Check if both conditions are met\n",
-    "    print(\"Congratulations! You have passed the course.\")\n",
-    "else:\n",
-    "    print(\"You need to improve your score or attendance to pass.\")\n"
    ]
   },
   {
@@ -589,60 +434,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cc804f2-9f59-451e-8722-ae8fc5a65ae1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "607f2c0e-1cfc-4d02-957e-397aa738ad11",
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5aa962ef-3cfc-4f4b-b6a6-ae5730123015",
-   "metadata": {},
-   "source": [
-    "# Nested if statement"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "1c643cc6-4b00-4a32-917c-e319625db19d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You are eligible to drive.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Nested if Statement: Implement following logic:\n",
-    "\n",
-    "# If age > 18 and has license, then eligible to drive\n",
-    "# if age > 18 and no license, then you eligible to drive but need Driver license to be on road\n",
-    "# if age < 18, then not eligible to drive\n",
-    "\n",
-    "age = 19 # change to 12, 19, \n",
-    "has_license = True\n",
-    "\n",
-    "if age >= 18:\n",
-    "    if has_license:\n",
-    "        print(\"You are eligible to drive.\")\n",
-    "    else:\n",
-    "        print(\"You are eligible to drive, but you need a driving license.\")\n",
-    "\n",
-    "else:\n",
-    "    print(\"You are too young to drive. You are younger than 18\")"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -677,6 +472,93 @@
    "source": [
     "# EXTRA"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aca3e17c-fa0a-4dba-a38f-c3cdc3bb64ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ask user whether he wants to continue and check that he enter only yes and no.\n",
+    "\n",
+    "user_input = input(\"Do you want to continue? (yes/no): \").strip().lower()\n",
+    "# print(user_input)\n",
+    "\n",
+    "if user_input == \"yes\" or user_input == \"no\":  # Check if the input is valid\n",
+    "    print(\"Thank you for your response.\")\n",
+    "    \n",
+    "else:\n",
+    "    print(\"Invalid input. Please enter 'yes' or 'no'.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bd8fb2b-a773-4a25-9f41-ce8be7ae7aa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Design a logic that print weather alert when temp < 32 or > 90\n",
+    "temp = 50\n",
+    "\n",
+    "if temp < 32 or temp > 90: \n",
+    "    print(\"Weather alert\")\n",
+    "    \n",
+    "else:\n",
+    "    print(\"Weather normal\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b26a991a-e95d-4efa-ba7e-091ba314045f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21aa897b-2fc3-4cd0-81d8-4589a67d0fac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Application: e.g.2: Give 20% discount if member is gold and purchase amount > 100\n",
+    "membership_status = \"gold\"\n",
+    "purchase_amount   = 90 # change this to 90 and 900\n",
+    "\n",
+    "if membership_status == \"gold\" and purchase_amount > 100:  # Check if both conditions are met\n",
+    "    print(\"You are eligible for a 20% discount!\")\n",
+    "    \n",
+    "else:\n",
+    "    print(\"You are not eligible for a discount.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8af0b00-523d-4d98-afe4-d7619d6320db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Design logic for -> student passes if score > 70 and attendance > 75%\n",
+    "exam_score = 78\n",
+    "attendance_percentage = 85  # Attendance in percentage\n",
+    "\n",
+    "if exam_score >= 70 and attendance_percentage >= 75:  # Check if both conditions are met\n",
+    "    print(\"Congratulations! You have passed the course.\")\n",
+    "else:\n",
+    "    print(\"You need to improve your score or attendance to pass.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a406fa75-5240-4f45-8a9a-f6cc542bef68",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
