--- a/02_Python_Essentials/L08_function_1_inbuilt-1_dir_help_sum_max_min_len_sorted_zip_round_map.ipynb
+++ b/02_Python_Essentials/L08_function_1_inbuilt-1_dir_help_sum_max_min_len_sorted_zip_round_map.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### prerequisite: print, strings, list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# FUNCTION: inbuilt and user-defined\n",
     "\n",
     "**why do we need function?** \n",
@@ -18,9 +11,15 @@
     "\n",
     "## in built function:\n",
     "Examples of in built fn: \n",
-    "- **print, input, int, float, len, range, type, isinstance, enumerate, list, tuple, dict, map, filter, any, sorted** etc\n",
-    "-  list of all in-built function: https://docs.python.org/3/library/functions.html\n",
-    "- we will look at few of them\n"
+    "- **print, input, int, float, len, range, type, list, tuple, dict, etc.**\n",
+    "-  list of all in-built function: https://docs.python.org/3/library/functions.html\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## We will look at few of them: **help, sum, min, max, sorted, len, zip, round, map**\n"
    ]
   },
   {
@@ -119,31 +118,85 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sum: 14\n",
-      "Minimum: -1\n",
-      "Maximum: 7\n",
+      "Sum: 14\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [3, 7, 5, -1] # list \n",
+    "# numbers = (3, 7, 5, -1) # tuple\n",
+    "\n",
+    "res = sum(numbers)\n",
+    "print(\"Sum:\", res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum: -1\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = min(numbers)\n",
+    "print(\"Minimum:\", res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum: 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = max(numbers)\n",
+    "print(\"Maximum:\", res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Sorted numbers: [-1, 3, 5, 7]\n"
      ]
     }
    ],
    "source": [
-    "# Lets look at sum, min, max, sorted\n",
-    "\n",
-    "# example of iterable: list\n",
-    "numbers = [3, 7, 5, -1] # list of numbers\n",
-    "\n",
-    "res = sum(numbers)\n",
-    "print(f\"Sum: {res}\")\n",
-    "\n",
-    "res = min(numbers)\n",
-    "print(f\"Minimum: {res}\")\n",
-    "\n",
-    "res = max(numbers)\n",
-    "print(f\"Maximum: {res}\")\n",
-    "\n",
     "res = sorted(numbers)\n",
-    "print(f\"Sorted numbers: {res}\")"
+    "print(\"Sorted numbers:\", res)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -162,17 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "5\n",
-      "3\n",
-      "2\n"
+      "4\n"
      ]
     }
    ],
@@ -180,18 +230,56 @@
     "# Need for len function:\n",
     "# I want to count the num of elements in containers for data\n",
     "\n",
-    "fruits_list = [ \"Guava\", \"Kiwi\", \"Mango\", \"Kiwi\" ] # list\n",
-    "print(len(fruits_list))\n",
+    "fruits = [ \"Guava\", \"Kiwi\", \"Mango\", \"Kiwi\" ] # list\n",
+    "# fruits = ( \"Guava\", \"Kiwi\", \"Mango\", \"Kiwi\" ) # tuple\n",
     "\n",
-    "fruits_tuple = ( \"Guava\", \"Kiwi\", \"Mango\", \"Kiwi\", \"jackfruit\" ) # tuple\n",
-    "print(len(fruits_tuple))\n",
+    "print(len(fruits))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = { \"Guava\", \"Kiwi\", \"Mango\" } # set\n",
+    "print(len(fruits))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits_dict = { \"Guava\": 2,\n",
+    "                \"Kiwi\": 4 } # dictionary. Fruits:quantity\n",
     "\n",
-    "fruits_set = { \"Guava\", \"Kiwi\", \"Mango\" } # set\n",
-    "print(len(fruits_set))\n",
-    "\n",
-    "fruits_dict = { \"Guava\": 2, \"Kiwi\": 4} # dictionary. Fruits:quantity\n",
     "print(len(fruits_dict))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -204,86 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### input , int, float"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sum is 12\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "enter your first number: 3\n",
-      "enter your second number: 5\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You entered 3 and 5\n",
-      "The type of a is <class 'str'>. The type of b is <class 'str'>\n",
-      "Your sum is 35\n"
-     ]
-    }
-   ],
-   "source": [
-    "# The need for input function: we want interactive program\n",
-    "# STEP1: User does not supply input\n",
-    "\n",
-    "a = 5\n",
-    "b = 7\n",
-    "ans = a + b\n",
-    "\n",
-    "print(f\"The sum is {ans}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter your first number: 3\n",
-      "Enter your second number: 7\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You entered 3 and 7\n",
-      "The type of a is <class 'str'>. The type of b is <class 'str'>\n",
-      "Your sum is 37\n"
-     ]
-    }
-   ],
-   "source": [
-    "# STEP2: We want user to input data. Now user supplies input ( but output is not what was desired )\n",
-    "\n",
-    "a = input(\"Enter your first number:\") # here a is str\n",
-    "b = input(\"Enter your second number:\") # here b is str\n",
-    "\n",
-    "# Lets print what the user entered\n",
-    "print(f\"You entered {a} and {b}\")\n",
-    "print(f\"The type of a is {type(a)}. The type of b is {type(b)}\")\n",
-    "\n",
-    "# And add the numbers\n",
-    "ans = a + b # concatenates the string\n",
-    "print(f\"Your sum is {ans}\") # ANSWER IS WRONG"
+    "## round()"
    ]
   },
   {
@@ -292,154 +301,132 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter your first number: 3\n",
-      "Enter your second number: 7\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The type of a is <class 'int'>. The type of b is <class 'int'>\n",
-      "Your sum is 10\n"
+      "3.14\n"
      ]
     }
    ],
    "source": [
-    "# STEP3: The need for int function.\n",
-    "# convert a, b into data-type int using type casting\n",
-    "a = input(\"Enter your first number:\") # here a is str\n",
-    "b = input(\"Enter your second number:\") # here b is str\n",
-    "\n",
-    "a = int(a) # type cast\n",
-    "b = int(b) # type cast\n",
-    "print(f\"The type of a is {type(a)}. The type of b is {type(b)}\")\n",
-    "\n",
-    "ans = a + b # now it adds int\n",
-    "\n",
-    "print(f\"Your sum is {ans}\") # ANSWER IS RIGHT"
+    "prediction = 3.14159\n",
+    "print(round(prediction, 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter your first number : 3\n",
-      "Enter your second number: 7\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your sum is 10\n"
-     ]
-    }
-   ],
-   "source": [
-    "# STEP4: convert a, b into data-type int directly: Let's combine/wrap int on input: \n",
-    "a = int(input(\"Enter your first number :\")) # here a is int\n",
-    "b = int(input(\"Enter your second number:\")) # here b is int\n",
-    "print(f\"The type of a is {type(a)}. The type of b is {type(b)}\")\n",
-    "\n",
-    "ans = a + b\n",
-    "\n",
-    "print(f\"Your sum is {ans}\") # ANSWER IS RIGHT"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11\n"
-     ]
-    }
-   ],
-   "source": [
-    "# SIDE NOTE: We can convert only whole numbers to int, not text character that are not whole numbers \n",
-    "\n",
-    "# a = \"heebie-jeebie\" # ERROR\n",
-    "# a = \"6.7\" # ERROR\n",
-    "\n",
-    "# a = 6.7  # FINE: 6\n",
-    "# a = \"11\" # FINE: 11\n",
-    "\n",
-    "x = int(a) \n",
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "enter your first number 7.2\n",
-      "enter your second number 2.1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "you entered 7.2 and 2.1\n",
-      "Your product is 15.120000000000001\n"
-     ]
-    }
-   ],
-   "source": [
-    "# int expects the string to be int kind, not float kind. \n",
-    "# int(\"6\") is fine, but int(\"6.7\") would give error.\n",
-    "# Now comes the need for float function: Now user supplies input with float values.\n",
-    "\n",
-    "a = float(input(\"enter your first number\"))  # user supplies 6.7\n",
-    "b = float(input(\"enter your second number\")) # user supplies 2.1\n",
-    "\n",
-    "ans = a * b\n",
-    "\n",
-    "print(f\"you entered {a} and {b}\")\n",
-    "print(f\"Your product is {ans}\")\n",
-    "\n",
-    "# print(type(ans))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## zip() for Feature Pairing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "4\n",
-      "3\n",
-      "3\n"
+      "[('A', 80), ('B', 90), ('C', 85)]\n"
      ]
     }
    ],
+   "source": [
+    "names = [\"A\", \"B\", \"C\"]\n",
+    "scores = [80, 90, 85]\n",
+    "\n",
+    "print(list(zip(names, scores)))\n",
+    "# print(dict(zip(names, scores)))\n",
+    "\n",
+    "# for name, score in zip(names, scores):\n",
+    "#     print(name, score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## map() — Feature Transformation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2', '3']\n",
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [\"1\", \"2\", \"3\"]\n",
+    "print(data)\n",
+    "\n",
+    "numbers = list(map(int, data)) # convert all number to int data type\n",
+    "print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
