--- a/02_Python_Essentials/L09-2_CSV_read.ipynb
+++ b/02_Python_Essentials/L09-2_CSV_read.ipynb
@@ -5,22 +5,24 @@
    "id": "79be2393-1c2d-49aa-960a-cb9397c98d50",
    "metadata": {},
    "source": [
-    "# Read /  Write to file using csv module"
+    "# Read csv file using csv module\n",
+    "- csv means Comma Seperated Value\n",
+    "- Read a file using **reader** or **DictReader**. Best practise is to use **DictReader**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "b6c4190f-3286-4321-9b50-bca53d649f8c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv # CSV comma Seperated Value file"
+    "import csv # module to read Comma Seperated Value file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "86467b12-6d03-4c34-bdf1-7fcabacefce8",
    "metadata": {},
    "outputs": [
@@ -33,7 +35,7 @@
     }
    ],
    "source": [
-    "# Write to a CSV file\n",
+    "# Lets create a CSV file\n",
     "\n",
     "# Data we want to write\n",
     "data = [\n",
@@ -42,12 +44,13 @@
     "    [\"Maxie\",   30, \"New York\"],\n",
     "    [\"Ashwani\", 29, \"New York\"],\n",
     "    [\"Huwan\",   81, \"Zurich\"],\n",
+    "    [\"Kim\",   39, \"Jaipur\"],\n",
     "    [\"Zohar\",   28, \"Zurich\"],\n",
     "]\n",
     "\n",
     "with open(\"people.csv\", \"w\", newline=\"\") as file:\n",
     "    writer = csv.writer(file)\n",
-    "    writer.writerows(data)\n",
+    "    writer.writerows(data) \n",
     "\n",
     "print(\"CSV file 'people.csv' created successfully.\")\n",
     "\n",
@@ -68,7 +71,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "42933ab9-20de-4f12-8208-2b5bd9af1a48",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "15a9863d-c49f-4fca-b019-0cbbf0e603c7",
    "metadata": {},
    "outputs": [
@@ -81,22 +92,68 @@
       "['Maxie', '30', 'New York']\n",
       "['Ashwani', '29', 'New York']\n",
       "['Huwan', '81', 'Zurich']\n",
+      "['Kim', '39', 'Jaipur']\n",
       "['Zohar', '28', 'Zurich']\n"
      ]
     }
    ],
    "source": [
-    "# Read and display the contents of the CSV file using reader\n",
+    "# style1) Read and display the contents of the CSV file using reader\n",
     "\n",
     "with open(\"people.csv\", \"r\") as file:\n",
-    "    reader = csv.reader(file)\n",
+    "    reader = csv.reader(file)    # data comes in as list\n",
     "    for row in reader:\n",
-    "        print(row)"
+    "        print(row)               # Each row is a list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
+   "id": "ef698bad-904a-443f-aa45-67b6e03e9154",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name City\n",
+      "Bobby New York\n",
+      "Maxie New York\n",
+      "Ashwani New York\n",
+      "Huwan Zurich\n",
+      "Kim Jaipur\n",
+      "Zohar Zurich\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Show me name and city:\n",
+    "\n",
+    "with open(\"people.csv\", \"r\") as file:\n",
+    "    reader = csv.reader(file)    # data comes in as list\n",
+    "    for row in reader:\n",
+    "        print(row[0], row[2])    # Access elements by index. You have to know index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b050ac4a-d69a-4b3d-a64a-4cd729db3491",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36e9c1bb-9856-4998-a2c0-8871ea4077c2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "35c852e7-87a3-4ae4-8d41-34d2a8a80f91",
    "metadata": {},
    "outputs": [
@@ -108,23 +165,91 @@
       "{'Name': 'Maxie', 'Age': '30', 'City': 'New York'}\n",
       "{'Name': 'Ashwani', 'Age': '29', 'City': 'New York'}\n",
       "{'Name': 'Huwan', 'Age': '81', 'City': 'Zurich'}\n",
+      "{'Name': 'Kim', 'Age': '39', 'City': 'Jaipur'}\n",
       "{'Name': 'Zohar', 'Age': '28', 'City': 'Zurich'}\n"
      ]
     }
    ],
    "source": [
-    "# Read and display the contents of the CSV file using DictReader\n",
+    "# style2) Read and display the contents of the CSV file using DictReader: Best Practise\n",
+    "# This reads each row as a dictionary with column names as keys.\n",
     "\n",
     "with open(\"people.csv\", \"r\") as file:\n",
-    "    reader = csv.DictReader(file)\n",
+    "    reader = csv.DictReader(file)  # data comes in as dictionary\n",
     "    for row in reader:\n",
-    "        print(row)"
+    "        print(row)                 # Each row is a dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "582b742a-4361-4d40-a76b-e0c889bf3eb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bobby New York\n",
+      "Maxie New York\n",
+      "Ashwani New York\n",
+      "Huwan Zurich\n",
+      "Kim Jaipur\n",
+      "Zohar Zurich\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Show me name and city:\n",
+    "\n",
+    "with open(\"people.csv\", \"r\") as file:\n",
+    "    reader = csv.DictReader(file)       # data comes in as dictionary\n",
+    "    for row in reader:\n",
+    "        print(row['Name'], row['City'])  # Access elements by actual Name,City"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "88a138e1-633b-4a0e-92f6-b89218df4981",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bobby lives in New York\n",
+      "Maxie lives in New York\n",
+      "Ashwani lives in New York\n",
+      "Huwan lives in Zurich\n",
+      "Kim lives in Jaipur\n",
+      "Zohar lives in Zurich\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Show me name and city: Meaningful message\n",
+    "\n",
+    "with open(\"people.csv\", \"r\") as file:\n",
+    "    reader = csv.DictReader(file)       # data comes in as dictionary\n",
+    "    for row in reader:\n",
+    "        print(f\"{row['Name']} lives in {row['City']}\")  # Access elements by actual Name,City"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88a138e1-633b-4a0e-92f6-b89218df4981",
+   "id": "03838355-109a-4790-9fae-3d011da8879a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d2fd6e1-947b-47ce-9157-6be98d886af9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -149,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "c4275f17-2e18-48d5-94f5-6ea85c1f0547",
    "metadata": {},
    "outputs": [
@@ -163,7 +288,7 @@
     }
    ],
    "source": [
-    "# 1) Who live in New York ?\n",
+    "# 1) Who live in Zurich ?\n",
     "\n",
     "with open(\"people.csv\", \"r\") as file:\n",
     "    reader = csv.DictReader(file)\n",
@@ -174,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "83bad3a2-0e6f-4ce9-9244-63bda98d60a6",
    "metadata": {},
    "outputs": [
@@ -199,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "640210a6-00fe-4b3d-b9e2-03fac9d0d331",
    "metadata": {},
    "outputs": [
@@ -213,19 +338,45 @@
     }
    ],
    "source": [
-    "# Display people living in New York and age > 25 \n",
+    "# 3) Display people living in New York and age > 25 \n",
     "# and print some meaningful message\n",
     "\n",
     "with open(\"people.csv\", \"r\") as file:\n",
     "    reader = csv.DictReader(file)\n",
     "    for row in reader:\n",
     "        if row['City'] == 'New York' and int(row['Age']) > 25:\n",
-    "            print(row[\"Name\"], \"lives in\", row['City'])"
+    "            print(f\"{row['Name']} lives in {row['City']}\")  # Access elements by actual Name,City"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "186774eb-efde-443b-bf9b-936c07fc6494",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77c110ef-0ef0-40c7-8aa8-ba21b9b485fa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ff0af76-156b-44b2-93c0-1fc0f2d9d270",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "eb4009d7-a490-4953-8b0d-0f6c3df9ae7c",
    "metadata": {},
    "outputs": [
@@ -233,13 +384,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All ages: [24, 30, 29, 81, 28]\n",
-      "Average age: 38.4\n"
+      "All ages: [24, 30, 29, 81, 39, 28]\n",
+      "Average age: 38.5\n"
      ]
     }
    ],
    "source": [
-    "# Reading CSV and Performing Simple Operations like calculating average of ages\n",
+    "# Read CSV and perform simple operations like calculate average of ages\n",
     "\n",
     "ages = []\n",
     "\n",
@@ -253,41 +404,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32e0b8de-9dc4-49ad-9fc2-6cf7a967ac49",
+   "cell_type": "markdown",
+   "id": "91c31103-a9c5-4845-be68-8f8fee474096",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# STOP"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "483d16be-95a3-4234-90f7-4c827c03d41b",
+   "execution_count": null,
+   "id": "0f0e2b8a-94c0-4799-8b4f-3fc161992bf9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "New rows appended to 'people.csv'.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Appending Data to an Existing CSV File\n",
-    "\n",
-    "new_rows = [\n",
-    "    [\"Frankie\", 40, \"New Delhi\"],\n",
-    "    [\"Einstien\", 27, \"Melbourne\"]\n",
-    "]\n",
-    "\n",
-    "with open(\"people.csv\", \"a\", newline=\"\") as file:\n",
-    "    writer = csv.writer(file)\n",
-    "    writer.writerows(new_rows)\n",
-    "\n",
-    "print(\"New rows appended to 'people.csv'.\")"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -296,43 +426,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a4ebb90-9b95-4c9e-8506-3c02db371580",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "afaf6387-1a5e-4e45-a14c-b6069e4d6ed9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Writing CSV Using Dictionaries\n",
-    "# Instead of lists, you can write data using DictWriter, which lets you specify field names.\n",
-    "\n",
-    "data = [\n",
-    "    {\"Name\": \"Rahman\", \"Age\": 35, \"City\": \"Moscow\"},\n",
-    "    {\"Name\": \"Ella\",   \"Age\": 29, \"City\": \"Hong Kong\"},\n",
-    "]\n",
-    "\n",
-    "with open(\"people_dict.csv\", \"w\", newline=\"\") as file:\n",
-    "    fieldnames = [\"Name\", \"Age\", \"City\"]\n",
-    "    writer = csv.DictWriter(file, fieldnames=fieldnames)\n",
-    "    \n",
-    "    writer.writeheader()      # Write the column headers\n",
-    "    writer.writerows(data)    # Write all rows\n",
-    "\n",
-    "print(\"CSV file 'people_dict.csv' created successfully.\")"
-   ]
   },
   {
    "cell_type": "code",
@@ -369,14 +462,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "18d6f398-f855-4080-9269-b1ca9623a9e3",
-   "metadata": {},
-   "source": [
-    "# STOP"
-   ]
   },
   {
    "cell_type": "code",
@@ -437,68 +522,6 @@
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1de5355-898d-4fee-9828-95041af5cfe8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercises for Students"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3bbff25-225c-4a93-a79e-3a3855297b1a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Task 1:\n",
-    "# Create a CSV file named students.csv with the following columns:\n",
-    "# Name,Subject,Marks\n",
-    "# Write data for at least 3 students."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d595492a-3371-4bfa-862b-0cb7953311fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Task 2:\n",
-    "# Read the file and print:\n",
-    "# <name> scored <marks> in <subject>.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0834ed9f-0f64-47ac-92a7-838bbbf68319",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Task 3 (Challenge):\n",
-    "# Append one more student’s data, then calculate and display the average marks."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "750de3a5-1e09-4208-ae28-07cda04686e4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Discussion Prompts\n",
-    "\n",
-    "# What’s the difference between text files and CSV files?\n",
-    "\n",
-    "# Why is newline=\"\" important when writing CSV files in Python?\n",
-    "\n",
-    "# How is DictReader more useful than reader?"
-   ]
   },
   {
    "cell_type": "code",
