--- a/02_Python_Essentials/L10-x-EXTRA-OPTIONAL.ipynb
+++ b/02_Python_Essentials/L10-x-EXTRA-OPTIONAL.ipynb
@@ -1,228 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf6c3477",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.0\n",
-      "Program continues running hereon.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Lets divide 10 by 5\n",
-    "x = 10/5\n",
-    "print(x)\n",
-    "\n",
-    "print(\"Program continues running hereon.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41df07ec",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Now we divide 10 by \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;241;43m10\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(x)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mProgram continues running hereon.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
-     ]
-    }
-   ],
-   "source": [
-    "# Now we divide 10 by 0 and get error\n",
-    "x = 10 / 0\n",
-    "print(x)\n",
-    "\n",
-    "print(\"Program continues running hereon.\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "1552c9b0",
+   "id": "c56743f9-73a0-4b3d-af0f-b17b142af7e9",
    "metadata": {},
    "source": [
-    "## Lets catch this error"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "a7476373",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "An error occurred! Please do not divide by 0\n",
-      "Program continues running hereon.\n"
-     ]
-    }
-   ],
-   "source": [
-    "try:\n",
-    "    x = 10 / 0  # This will raise a ZeroDivisionError\n",
-    "    \n",
-    "except:\n",
-    "    # This block executes if any exception occurs in the try block\n",
-    "    print(\"An error occurred! Please do not divide by 0\")\n",
-    "    \n",
-    "print(\"Program continues running hereon.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "51a319c5",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: 'y'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Create value error\u001b[39;00m\n\u001b[0;32m      2\u001b[0m user_input \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter a number: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m \u001b[38;5;241m/\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43muser_input\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m100 divided by \u001b[39m\u001b[38;5;132;01m{\u001b[39;00muser_input\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresult\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'y'"
-     ]
-    }
-   ],
-   "source": [
-    "# Create value error\n",
-    "user_input = input(\"Enter a number: \")\n",
-    "result = 100 / int(user_input)\n",
-    "print(f\"100 divided by {user_input} is {result}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "69310a0d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter a number:  0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: You cannot divide by zero!\n"
-     ]
-    }
-   ],
-   "source": [
-    "# ----------------------------------------\n",
-    "# Example 2: Catching specific exceptions\n",
-    "# ----------------------------------------\n",
-    "\n",
-    "\"\"\"\n",
-    "Shows how to catch specific types of exceptions.\n",
-    "This is generally preferred over catching all exceptions.\n",
-    "\"\"\"\n",
-    "try:\n",
-    "    # Code that might raise different kinds of exceptions\n",
-    "    user_input = input(\"Enter a number: \")\n",
-    "    result = 100 / int(user_input)\n",
-    "    print(f\"100 divided by {user_input} is {result}\")\n",
-    "    \n",
-    "except ZeroDivisionError:\n",
-    "    # This executes only for division by zero errors\n",
-    "    print(\"Error: You cannot divide by zero!\")\n",
-    "    \n",
-    "except ValueError:\n",
-    "    # This executes if int() conversion fails (e.g., if user enters letters)\n",
-    "    print(\"Error: You must enter a valid number!\")\n",
-    "    \n",
-    "except Exception as e:\n",
-    "    # This catches any other exceptions not specifically handled above\n",
-    "    print(f\"An unexpected error occurred: {e}\")\n",
-    "\n"
+    "# EXTRA"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00e3941e",
+   "id": "8f30bf64-f53f-450a-9af7-013501ba630f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'dummy.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Lets find error if file does not exist\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m file \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdummy.txt\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m content \u001b[38;5;241m=\u001b[39m file\u001b[38;5;241m.\u001b[39mread()\n",
-      "File \u001b[1;32mc:\\Users\\UCT\\Desktop\\ashwani_stuff\\DA_code\\.venv\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    322\u001b[0m     )\n\u001b[1;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'dummy.txt'"
-     ]
-    }
-   ],
-   "source": [
-    "# Lets find error if file does not exist\n",
-    "file = open(\"dummy.txt\", \"r\")\n",
-    "content = file.read()\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "efb4333d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File does not exist\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Lets catch above error:\n",
-    "try:\n",
-    "    file = open(\"dummy.txt\", \"r\")\n",
-    "    content = file.read()\n",
-    "except FileNotFoundError:\n",
-    "    print(\"File does not exist\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "5a28095b-d91c-4e3d-976b-36d8038f06cc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File content: This is a sample file created by the exception handler.\n",
-      "Execution completed. Cleaning up resources...\n",
-      "File closed successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ----------------------------------------\n",
     "# Example 3: try-except-else-finally\n",
@@ -263,18 +54,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "3a5d1510-8b4a-496a-a776-944d2e315d4e",
+   "execution_count": null,
+   "id": "71903040-0b6c-4eed-b8d4-68877913cddf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Caught exception: Invalid age value: Age is unrealistically high\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9372a0cb-cdf9-46ea-b4d7-b8f76fcb2ff3",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# ----------------------------------------\n",
     "# Example 4: Raising exceptions manually\n",
@@ -334,27 +125,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6702de96-03d8-4512-a0e2-74dbfcad8ba9",
+   "id": "375c2d3e-9c07-46d0-9fb8-e609fa0ead99",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# OPTIONAL ...STOP HERE"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "b41fe6bb-2847-4c0b-a38b-6677679754f5",
+   "execution_count": null,
+   "id": "8424bfdd-1800-4d4d-831e-87d0928c4329",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Banking error: Cannot withdraw $150. Balance is $100, which is $50 short.\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5597c14-0412-414d-9eb0-e18835e2fbc3",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# ----------------------------------------\n",
     "# Example 5: Creating custom exceptions\n",
@@ -410,18 +199,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "64a0f98c-c3f9-4729-9ee0-5d464d35b9cc",
+   "execution_count": null,
+   "id": "73afe80f-3d6c-4bb7-a38b-29ff14dd0785",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File content: This is a sample file created by the exception handler.\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e70e5dcb-92e9-4e8b-a026-590c36dd49e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10565f4b-8291-4c7e-a835-85a6604f750a",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# ----------------------------------------\n",
     "# Example 6: Context managers (with statement)\n",
@@ -451,45 +248,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a6ffc13-e966-463c-a2eb-06d92cced940",
+   "id": "29d71078-537e-466b-b988-53ce72ab9a51",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Following is optional ....advanced concepts...not used very often"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "73bd36c6-4a34-4db3-b9ca-cdd735482a3a",
+   "execution_count": null,
+   "id": "62effd5c-997b-427f-a8d5-64f16300532a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting calculation process...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter first number:  2\n",
-      "Enter second number:  0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: Cannot divide by zero!\n",
-      "Calculation result: undefined\n",
-      "Calculation process finished.\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a053fde-738b-44f8-9bb8-614587ef5702",
+   "metadata": {},
+   "outputs": [],
    "source": [
+    "# Following is optional ....advanced concepts...not used very often\n",
     "# ----------------------------------------\n",
     "# Example 7: Nested exception handling\n",
     "# ----------------------------------------\n",
@@ -534,31 +313,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "cf878a34-b1d4-4f60-a638-dd8523cc46d1",
+   "execution_count": null,
+   "id": "23420a76-d4eb-4dd4-b63b-6bb700c753b6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "=== Example 9: Data Processing Example ===\n",
-      "\n",
-      "Processing user data...\n",
-      "Error in record 2: Invalid age: -5\n",
-      "Error in record 3: \"Missing 'age' field\"\n",
-      "Error in record 4: \"Missing 'name' field\"\n",
-      "Error in record 5: invalid literal for int() with base 10: 'twenty-two'\n",
-      "\n",
-      "Successfully processed records:\n",
-      "- John Smith, Age: 28, Adult: True\n",
-      "- Mike Brown, Age: 42, Adult: True\n",
-      "\n",
-      "Processed 2 out of 6 records successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25dea287-af43-4eeb-a21f-2511e6678329",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# ----------------------------------------\n",
     "# Example 9: Practical example - Data processing with exceptions\n",
@@ -644,14 +410,6 @@
     "    print(\"\\n=== Example 9: Data Processing Example ===\")\n",
     "    demo_data_processing()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1edda030-d199-4551-a9aa-154729b8af57",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -670,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
